# flightpulse

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  INCIDENTS.md  INTERVIEW_PREP.md  Makefile  PIPELINE.md  README.md  SETUP.md  dagster_cloud.yaml  docker-compose.yml  requirements.streaming.txt  requirements.txt
.github/workflows/: ci.yml  dagster-cloud-deploy.yml  dbt-prod.yml  terraform.yml
dbt/: dbt_project.yml  packages.yml  profiles.yml.example
dbt/macros/: drop_ci_schema.sql  ensure_drift_log_table.sql  generate_schema_name.sql  get_column_or_null.sql  incremental_window.sql  log_unknown_columns.sql
dbt/models/: sources.yml
dbt/snapshots/: snp_dim_airport.sql
infra/scripts/: bind_snowflake_integration.py  promote_dev_to_prod.py
infra/terraform/: cloudfront.tf  cognito.tf  dagster_cloud.tf  ecs.tf  glue.tf  iam.tf  lambdas.tf  main.tf  msk.tf  observability.tf  outputs.tf  s3.tf  snowflake.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
ingestion/airbyte/: bts_source.yaml  run_bts_sync.py
ingestion/seeds/: load_openflights.py
ingestion/streaming/: Dockerfile.consumer  Dockerfile.producer  http_client.py  metrics.py  opensky_consumer.py  (+1 more)
orchestration/dagster_project/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
orchestration/dagster_project/dagster_project/: __init__.py  constants.py  definitions.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py
orchestration/dagster_project/dagster_project/assets/: __init__.py  bronze.py  dbt.py
serving/: __init__.py
tests/: conftest.py
(+40 files in other folders)
